--- a/packages/config-mui/package.json
+++ b/packages/config-mui/package.json
@@ -1,8 +1,5 @@
 {
   "name": "config-mui",
   "version": "0.0.0",
-  "main": "index.ts",
-  "dependencies": {
-    "config-mui": "file:"
-  }
+  "main": "index.ts"
 }
