--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mui/material": "5.15.14",
     "@tanstack/react-query": "5.28.8",
     "@tanstack/react-query-devtools": "5.28.8",
+    "admin-lte": "3.2",
     "date-fns": "3.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
