--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "5.28.8",
     "@tanstack/react-query-devtools": "5.28.8",
     "admin-lte": "3.2",
+    "axios": "^1.7.9",
     "date-fns": "3.6.0",
     "extenso": "^2.1.0",
     "react": "18.2.0",
