--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "extenso": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^11.0.3",
     "zod": "3.22.4"
   },
   "devDependencies": {
