--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "extenso": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.3",
+    "yup": "^1.6.1",
     "zod": "3.22.4"
   },
   "devDependencies": {
