--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "axios": "^1.7.9",
     "date-fns": "3.6.0",
     "extenso": "^2.1.0",
+    "js-cookie": "^3.0.5",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
