--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.3",
+    "swr": "^2.3.0",
     "yup": "^1.6.1",
     "zod": "3.22.4"
   },
