chore: recover bootstrap global installation

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tanstack/react-query-devtools": "5.28.8",
     "admin-lte": "3.2",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "date-fns": "3.6.0",
     "extenso": "^2.1.0",
     "js-cookie": "^3.0.5",
